--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Música Interactiva - Felipe Rodríguez</title>
     <link rel="icon" href="ico/music5.ico" type="image/x-icon">
     <style>
-        /* ... [Estilos anteriores sin cambios hasta sidebar] ... */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -67,44 +66,39 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
 
-       .content-container {
-    display: flex;
-    padding: 265px 20px 20px 200px; /* Cambiado */
-}
+        .content-container {
+            display: flex;
+            padding: 265px 20px 20px 200px;
+        }
 
-.main-content {
-    flex: 1;
-    background: rgba(255, 255, 255, 0.95);
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    margin-left: 20px;
-    margin-top: 20px; /* Añadido */
-}
+        .main-content {
+            flex: 1;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            margin-left: 20px;
+            margin-top: 20px;
+        }
 
         .sidebar {
             position: fixed;
-            left: 0; /* Cambiado de right a left */
+            left: 0;
             top: 80px;
             width: 180px;
             background: rgba(0, 123, 255, 0.9);
             padding: 15px;
             height: calc(100vh - 100px);
             backdrop-filter: blur(10px);
-        }
-
-        .sidebar h2 {
-            color: white;
-            text-align: center;
-            margin-bottom: 20px;
-            font-size: 1.5em;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+            overflow-y: auto; /* Barra de desplazamiento vertical */
         }
 
         .menu-links {
             display: flex;
             flex-direction: column;
             gap: 10px;
+            max-height: calc(100vh - 200px); /* Altura máxima */
+/*            overflow-y: auto;*/
         }
 
         .menu-links a {
@@ -120,7 +114,7 @@
 
         .menu-links a:hover {
             background: rgba(255, 255, 255, 0.2);
-            transform: translateX(5px); /* Cambiado a positivo para mover hacia la derecha */
+            transform: translateX(5px);
         }
 
         .sound-controls {
@@ -179,10 +173,12 @@
         <h1>Bienvenido a la Página de Felipe Rodríguez</h1>
     </div>
 
+
     <div class="content-container">
         <div class="sidebar">
             <h2>Menú</h2>
             <div class="menu-links">
+                <a href="register.html">Registro</a>    
                 <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a>
                 <a href="construccion_acordes.html">Construccion de acordes</a>
                 <a href="acordes.html">Diagrama de acordes</a>
