piano  script ahora con sonido real
faltan correcciones

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <!-- <a href="superguiaacordes.pdf">Guia todos los acordes</a> -->
                     <a href="superguiaacordes.pdf" target="_blank">Guía todos los acordes</a>
                 <a href="guitarra_didactica.html">Guitarra Interactiva</a>
-                <a href="piano_didactico.html">Piano Interactivo</a>
+                <a href="piano_real_didactico.html">Piano Interactivo</a>
                 <a href="escalas.html">Conformar Escalas</a>
                 <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas\src\dist/index.html">Círculo de Quintas</a></li> <!-- Nuevo enlace -->
                  <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas2\dist/index.html">Círculo de Quintas2</a></li> <!-- Nuevo enlace -->
