--- a/old/piano_didactico.html
+++ b/old/piano_didactico.html
@@ -125,6 +125,21 @@
       color: #000;
       font-weight: bold;
     }
+
+    button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #4CAF50; /* Color verde */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+button:hover {
+  background-color: #45a049; /* Color verde más oscuro al pasar el mouse */
+}
   </style>
 </head>
 
