--- a/registro_database_local/register.html
+++ b/registro_database_local/register.html
@@ -84,7 +84,6 @@
     </form>
 </div>
 
-<!-- <script src="registro_database_local/script.js"></script> -->
- <script src="registro_database_local/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
