--- a/registro_database_local/success.html
+++ b/registro_database_local/success.html
@@ -46,8 +46,7 @@
 
 <div class="container">
     <p>Tu cuenta ha sido creada correctamente.</p>
-    <!-- <a href="index.html">Volver a la página principal</a> -->
-     <a href="../index.html">Volver a la página principal</a>
+    <a href="index.html">Volver a la página principal</a>
 </div>
 
 </body>
