--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" href="ico/music5.ico" type="image/x-icon">
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -180,8 +181,9 @@
             <div class="menu-links">
                 <a href="register.html">Registro</a>    
                 <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a>
-                <a href="construccion_acordes.html">Construccion de acordes</a>
-                <a href="acordes.html">Diagrama de acordes</a>
+                <a href="construccion_acordes.html">Teoria de acordes</a>
+                <!-- <a href="acordes.html">Diagrama de acordes</a> -->
+                <a href="escalas.html">Escalas y modos</a>
                 <a href="acordes_imagenes.html">Diagrama de acordes2</a>
                 <!-- <a href="superguiaacordes.pdf">Guia todos los acordes</a> -->
                     <a href="superguiaacordes.pdf" target="_blank">Guía todos los acordes</a>
