additions p chords and pentatonic comparision
p chords added
fixed  penta major and minor for easier comparision

--- a/acordes_imagenes.html
+++ b/acordes_imagenes.html
@@ -184,6 +184,16 @@
             </div>
         </div>
     </div>
+     <!-- Acordes de Quinta o Power Chords -->
+    <div class="chord-section">
+        <h2>Acordes de Quinta o Power Chords</h2>
+        <div class="chord-row">
+            <div class="chord-box diminished">
+                <img src="acordes/acordes_quinta.png" alt="Acordes de Quinta o Power Chords">
+                <div class="chord-name">Acordes de Quinta o Power Chords</div>
+            </div>
+        </div>
+    </div>
 
     <!-- Acordes Pentatonicos -->
     <div class="chord-section">
