additions and fixes

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                 <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a>
                 <a href="construccion_acordes.html">Teoria de acordes</a>
                 <!-- <a href="acordes.html">Diagrama de acordes</a> -->
+                  <a href="estructura_acordes.html">Estructura de acordes</a>
                 <a href="acordes_imagenes.html">Diagrama de acordes</a>
                 <a href="escalas.html">Escalas y modos</a>
                 <!-- <a href="acordes_imagenes.html">Diagrama de acordes2</a> -->
