control de registro

--- a/escalas_diagrama.html
+++ b/escalas_diagrama.html
@@ -214,6 +214,22 @@
     </div>
 </div>
 
+   <div class="chord-section">
+    <h2>Escala Pentatonica Blues Mayor & Menor</h2>
+    <div class="chord-row">
+        <div class="chord1-box">
+            <div class="image-container mayor">
+                <div class="title">Escala Pentatonica Blues Mayor</div>
+                <img src="escalas/blues_mayor.png" alt="Escala Pentatonica Blues Mayor">
+            </div>
+            <div class="image-container menor">
+                <div class="title">Escala Pentatonica Blues Menor</div>
+                <img src="escalas/blues_menor.png" alt="Escala Pentatonica Blues Menor">
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <!-- Acordes Menores -->
     <div class="chord-section">
