--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <a href="estructura_acordes.html">Estructura de acordes</a>
                 <a href="acordes_imagenes.html">Diagrama de acordes</a>
                 <a href="escalas_diagrama.html">Diagrama Escalas y modos</a>
-                <a href="escalas_interactivo">Estructura Acordes y escalas</a>
+                <a href="escalas_interactivo.html">Estructura Acordes y escalas</a>
                 <!-- <a href="acordes_imagenes.html">Diagrama de acordes2</a> -->
                 <!-- <a href="superguiaacordes.pdf">Guia todos los acordes</a> -->
                     <!-- <a href="superguiaacordes.pdf" target="_blank">Guía todos los acordes</a> -->
