--- a/index.html
+++ b/index.html
@@ -190,7 +190,12 @@
                     <!-- <a href="superguiaacordes.pdf" target="_blank">Guía todos los acordes</a> -->
                 <a href="guitarra_didactica.html">Guitarra Interactiva</a>
                 <a href="piano_real_didactico.html">Piano Interactivo</a>
-                <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas\src\dist/index.html">Círculo de Quintas</a></li> <!-- Nuevo enlace -->
+                <!-- <a href="C:/Users/felip/Documents/GitHub/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a></li> -->
+                 <!-- Nuevo enlace --> 
+                 <a href="https://felip.github.io/website_guitarra/src/dist/index.html">Círculo de Quintas</a>
+                 <!-- <a href="src/index.html">Círculo de Quintas</a> -->
+                 <!-- Nuevo enlace --> 
+
                  <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas2\dist/index.html">Círculo de Quintas2</a></li> <!-- Nuevo enlace -->
                  <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas3/index.html">Círculo de Quintas3</a></li> <!-- Nuevo enlace -->
                  <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas4\dist/index.html">Círculo de Quintas4</a></li> <!-- Nuevo enlace -->
