--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                 <a href="piano_real_didactico.html">Piano Interactivo</a>
                 <!-- <a href="C:/Users/felip/Documents/GitHub/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a></li> -->
                  <!-- Nuevo enlace --> 
-                 <a href="https://felip.github.io/website_guitarra/src/dist/index.html">Círculo de Quintas</a>
+                 <!-- <a href="https://felip.github.io/website_guitarra/src/dist/index.html">Círculo de Quintas</a> -->
+                 <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a>
                  <!-- <a href="src/index.html">Círculo de Quintas</a> -->
                  <!-- Nuevo enlace --> 
 
