--- a/index.html
+++ b/index.html
@@ -178,28 +178,32 @@
             <h2>Menú</h2>
             <div class="menu-links">
                 <a href="register.html">Registro</a>    
-                <!-- <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a> -->
                 <a href="construccion_acordes.html">Teoria de acordes</a>
-                <!-- <a href="acordes.html">Diagrama de acordes</a> -->
-                  <a href="estructura_acordes.html">Estructura de acordes</a>
+                <a href="estructura_acordes.html">Estructura de acordes</a>
                 <a href="acordes_imagenes.html">Diagrama de acordes</a>
                 <a href="escalas_diagrama.html">Diagrama Escalas y modos</a>
                 <a href="escalas_interactivo.html">Estructura Acordes y escalas</a>
+                <a href="guitarra_didactica.html">Guitarra Interactiva</a>
+                <a href="piano_real_didactico.html">Piano Interactivo</a>
+                 <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a>
+                  <!-- <a href="intervalos_tonos.html">Notacion musical, Tonos e intervalos</a> -->
+ <!-- <a href="acordes.html">Diagrama de acordes</a> -->
+                <!-- <a href="C:/Users/felip/Documents/GitHub/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a></li> -->
                 <!-- <a href="acordes_imagenes.html">Diagrama de acordes2</a> -->
                 <!-- <a href="superguiaacordes.pdf">Guia todos los acordes</a> -->
                     <!-- <a href="superguiaacordes.pdf" target="_blank">Guía todos los acordes</a> -->
-                <a href="guitarra_didactica.html">Guitarra Interactiva</a>
-                <a href="piano_real_didactico.html">Piano Interactivo</a>
-                <!-- <a href="C:/Users/felip/Documents/GitHub/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a></li> -->
                  <!-- Nuevo enlace --> 
                  <!-- <a href="https://felip.github.io/website_guitarra/src/dist/index.html">Círculo de Quintas</a> -->
-                 <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a>
+                 <!-- <a href="https://pasturryx.github.io/website_guitarra/circulo_quintas/src/dist/index.html">Círculo de Quintas</a> -->
                  <!-- <a href="src/index.html">Círculo de Quintas</a> -->
                  <!-- Nuevo enlace --> 
 
-                 <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas2\dist/index.html">Círculo de Quintas2</a></li> <!-- Nuevo enlace -->
-                 <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas3/index.html">Círculo de Quintas3</a></li> <!-- Nuevo enlace -->
-                 <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas4\dist/index.html">Círculo de Quintas4</a></li> <!-- Nuevo enlace -->
+                 <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas2\dist/index.html">Círculo de Quintas2</a></li>  -->
+                 <!-- Nuevo enlace -->
+                 <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas3/index.html">Círculo de Quintas3</a></li>  -->
+                 <!-- Nuevo enlace -->
+                 <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas4\dist/index.html">Círculo de Quintas4</a></li> -->
+                 <!-- Nuevo enlace --> -->
             </div>
 
             <div class="sound-controls">
