--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             cursor: pointer;
             font-size: 1em;
             width: 100%;
+            margin-top: 10px;
         }
 
         .menu-links {
@@ -81,6 +82,9 @@
             padding: 10px;
             border-radius: 5px;
             margin: 10px 0;
+            position: absolute; /* Hacer que se superponga */
+            width: 100%;
+            z-index: 2; /* Asegurar que esté por encima */
         }
 
         .menu-links a {
@@ -235,7 +239,8 @@
         });
 
         menuToggle.addEventListener('click', () => {
-            menuLinks.style.display = menuLinks.style.display === 'block' ? 'none' : 'block';
+            const isDisplayed = menuLinks.style.display === 'block';
+            menuLinks.style.display = isDisplayed ? 'none' : 'block';
         });
     </script>
 </body>
