removido la shit

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                  <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas3/index.html">Círculo de Quintas3</a></li>  -->
                  <!-- Nuevo enlace -->
                  <!-- <a href="C:\Users\felip\Desktop\Interactive websie\circulo_quintas4\dist/index.html">Círculo de Quintas4</a></li> -->
-                 <!-- Nuevo enlace --> -->
+                 <!-- Nuevo enlace -->
             </div>
 
             <div class="sound-controls">
@@ -220,23 +220,23 @@
             </div>
         </div>
 
-        <div class="main-content">
-            <h3>Sobre mí</h3>
-            <p>
-                Hola, soy Felipe Rodríguez, tengo 31 años y soy de Arica, Chile. 
-                Soy egresado de Traductor e Intérprete de la Universidad Arturo Prat.
+        <!-- <div class="main-content"> -->
+            <!-- <h3>Sobre mí</h3> -->
+            <!-- <p> -->
+                <!-- Hola, soy Felipe Rodríguez, tengo 31 años y soy de Arica, Chile.  -->
+                <!-- Soy egresado de Traductor e Intérprete de la Universidad Arturo Prat. -->
             <!-- </p> -->
             <!-- <p> -->
-                Actualmente estoy cursando el último año de Trabajo Social en la 
-                Universidad de Tarapacá, Arica.
+                <!-- Actualmente estoy cursando el último año de Trabajo Social en la  -->
+                <!-- Universidad de Tarapacá, Arica. -->
             <!-- </p> -->
             <!-- <p> -->
-                Me apasiona la música y esta página fue creada como una guía personal. 
-                A medida que la fui desarrollando, me di cuenta de que debía compartirla 
-                con el público, promoviendo el conocimiento libre.
-            </p>
-        </div>
-    </div>
+                <!-- Me apasiona la música y esta página fue creada como una guía personal.  -->
+                <!-- A medida que la fui desarrollando, me di cuenta de que debía compartirla  -->
+                <!-- con el público, promoviendo el conocimiento libre. -->
+            <!-- </p> -->
+        <!-- </div> -->
+    <!-- </div> -->
 
     <script>
         const video = document.getElementById('background-video');
